# brute_force_simulator

./: CONTRIBUTING.md  README.md  architecture.md  attacker.py  auth.py  common_passwords.txt  config.py  dashboard.py  index (2).html  login.html  main.py  reporter.py  requirements.txt  server.py  setup.cfg  test_attacker.py  test_auth.py  test_wordlist.py  wordlist.py
