[metadata]
name            = brute-force-simulator
version         = 1.0.0
author          = Prince
description     = Educational Brute Force Simulator — Internship Project
long_description = file: README.md
long_description_content_type = text/markdown
license         = MIT
keywords        = cybersecurity, brute-force, penetration-testing, education
classifiers     =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Topic :: Security

[options]
packages        = find:
python_requires = >=3.10
install_requires =
    flask>=3.0
    requests>=2.31
    python-dotenv>=1.0

[tool:pytest]
testpaths = tests
addopts   = -v --tb=short
